# DLAI_Pytorch_Techniques_Ecosystem

./: .gitignore  main.py  pyproject.toml
Module1/Assignment/: C2M1_Assignment (1).ipynb
Module1/Ex1/: C2_M1_Lab_1_tuning_and_metrics.ipynb
Module1/Ex2/: C2_M1_Lab_2_Schedulers.ipynb
Module1/Ex3/: C2_M1_Lab_3_Optuna.ipynb
Module1/Ex4/: C2_M1_Lab_4_Efficiency.ipynb
Module2/Assignment/: C2M2_Assignment.ipynb
Module2/Ex1/: C2_M2_Lab_1_torchvision_1.ipynb
Module2/Ex2/: C2_M2_Lab_2_torchvision_2.ipynb
Module2/Ex3/: C2_M2_Lab_3_torchvision_3.ipynb
Module2/Ex4/: C2_M2_Lab_4_transfer_learning.ipynb
Module3/Assignment/: C2M3_Assignment.ipynb  training_logs.pkl
Module3/Ex1/: C2_M3_Lab_1_basic_tokenization.ipynb
Module3/Ex2/: C2_M3_Lab_2_embeddings.ipynb
Module3/Ex3/: C2_M3_Lab_3_build_text_classifier.ipynb
Module3/Ex4/: C2_M3_Lab_4_finetuned_text_classifier.ipynb
Module4/Ex1/: C2_M4_Lab_1_optimizing_dataloaders.ipynb
