[project]
name = "dlai-pytorch-techniques-ecosystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets==8.1.2",
    "matplotlib==3.10.3",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas==2.2.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch==2.7.0",
    "torchmetrics==1.7.2",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
]
